# CS184-Final-Project

./: README.md  index.html  milestone.html  report.html
Checkpoint/: camera_info.cpp  camera_info.h  collada_info.h  json.hpp  simulator.cpp  sphere.hpp  triangle.hpp  try_main.cpp
Checkpoint/include/: BVH.hpp  Bounds3.hpp  Grid.hpp  Intersection.hpp  Ray.hpp  Rectangular.hpp  SnowParticle.hpp  Sphere.hpp  Triangle.hpp  extra.hpp  global.hpp
Checkpoint/src/: BVH.cpp  Grid.cpp  SnowParticle.cpp  camera.cpp  main.cpp
Project/: .gitignore  CMakeLists.txt  shape.hpp
Project/CGL/: CMakeLists.txt  README.md
Project/CGL/examples/: CMakeLists.txt
Project/CGL/include/CGL/: CGL.h  color.h  matrix3x3.h  renderer.h  spectrum.h  vector2D.h  vector3D.h  vector4D.h  viewer.h
Project/CGL/src/: CMakeLists.txt  color.cpp  matrix4x4.cpp  viewer.cpp
Project/CGL/tests/: CMakeLists.txt  osd.cpp
Project/ext/nanogui/docs/_static/: entypo.eot
Project/ext/nanogui/ext/eigen/bench/btl/generic_bench/static/: intel_bench_fixed_size.hh  static_size_generator.hh
Project/ext/nanogui/ext/eigen/bench/btl/generic_bench/timers/: STL_perf_analyzer.hh  STL_timer.hh  mixed_perf_analyzer.hh
Project/ext/nanogui/ext/eigen/bench/btl/generic_bench/utils/: size_lin_log.hh
Project/ext/nanogui/ext/glfw/examples/: glfw.icns
Project/ext/nanogui/src/: glutil.cpp
Project/include/: Bounds3.hpp  Grid.hpp  Particle.hpp  camera.hpp  global.hpp  shape.hpp  simDomain.hpp  simulator.h  sphere.hpp  triangle.hpp
Project/src/: CMakeLists.txt  Grid.cpp  Grid.h  Grid.hpp  Particle.cpp  Particle.h  Particle.hpp  bounds3.hpp  camera.cpp  camera.h  global.h  global.hpp  main.cpp  shape.cpp  shape.hpp  simDomain.cpp  simDomain.hpp  simulator.cpp  try_main.cpp
code/include/: Intersection.hpp  Shape.hpp  SnowParticle.hpp  Triangle.hpp  global.hpp
code/src/: Grid.cpp  main.cpp
snow_test/: CMakeLists.txt
snow_test/include/: Grid.hpp  SnowParticle.hpp  Sphere.hpp  global.hpp
snow_test/src/: BVH.cpp  Grid.cpp  SimDomain.cpp  SnowParticle.cpp  main.cpp
